Add option QRegularExpression::UnanchoredWildcardConversion to addPart and delPart diff regexes

They need to find unanchored matches i.e. matches beginning after, not just beginning at, the offset int given to delPart.match() and addPart.match().
This generates match percentages identical to prior to 341525d9f6e370f34e9efe0836fd24609488c61a when the bug was introduced where regexes almost never matched anything and so match percentages were always very high.

BUG: 490441


(cherry picked from commit 4aac9757c59109dd9953faf68c891ba53c08d2d7)

7191eaf0 Add option QRegularExpression::UnanchoredWildcardConversion to addPart and delPart diff regexes

Co-authored-by: Finley Watson <fin-w@tutanota.com>